--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,13 @@
 <html>
 <head>
   <title>Crunchalert</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :all %>
+  <%= stylesheet_link_tag "main" %>
+  <%= javascript_include_tag "jquery-1.5.1.min" %>
   <%= csrf_meta_tag %>
 </head>
 <body>
+
+<%= image_tag("crunchalert_logo.png", :alt => "crunchalert") %>
 
 <%= yield %>
 
