--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,25 @@
 
+
+  <div class="recent">
+    Recent CrunchAlerts
+
+    <ul>
+      <li>Google</li>
+      <li>Facebook</li>
+      <li>Twitter</li>
+      <li>Justin Beiber</li>
+    </ul>
+
+  </div>
+
+
+
+<!--
+
+logged in: Your CrunchAlerts, Logout, Account
+
+
+
 <%= form_for :user do |f| %>
   <div class="field">
     <%= f.label :email %><br />
@@ -6,9 +27,9 @@
   </div>
 
 
-
-
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
+
+-->
