--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <b>email alerts on CrunchBase updates from your favorite tech companies and people</b>
 
     <div class="login">
-    Register | Login <!-- need to change depending on user state --> 
+      <%= link_to "Register", :action => "register" %> | Login
     </div>
   </div>
 
