--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <b>email alerts on CrunchBase updates from your favorite tech companies and people</b>
 
     <div class="login">
-      <%= link_to "Register", :action => "register" %> | Login
+      <%= link_to "Register", :action => "register" %> | <%= link_to "Login", :action => "login" %>
     </div>
   </div>
 
