--- a/app/views/pages/register.html.erb
+++ b/app/views/pages/register.html.erb
@@ -1,17 +1,25 @@
 
-
 <%= form_for :user do |f| %>
-  <div class="field">
+
+  <div class="email">
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </div>
 
+  <div class="password">
+    <%= f.label :password %><br />
+    <%= f.password_field :password, :size => 40 %>
+  </div>
+
+  <div class="field">
+    <%= f.label :password_confirmation  %><br />
+    <%= f.password_field :password_confirmation, :size => 40 %>
+  </div>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
 
 
 
