--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,14 @@
     <div class="login">
 
 
+      <% if signed_in? %>
+      <%= link_to "Account", account_path %>
+      <%= link_to "Logout", logout_path, :method => :delete %>
+      <% else %>
 
      <%= link_to "Register", signup_path %>
-
-     <%= link_to "Sign in", signin_path %>
-
-
+      <%= link_to "Login", login_path %>
+      <% end %>
 
 
     </div>
