--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -1,5 +1,6 @@
 
-<%= start_form_tag :action=>'forgot_password'%>
+
+<%= form_for(:forgot_password, :url => forgot_password_path) do |f| %>
 
 <h3>Forgotten password</h3>
 
@@ -7,4 +8,4 @@ Email: <%= text_field "user","email" %><br/>
 
 <%= submit_tag 'Email password' %>
 
-<%= end_form_tag %>
+<% end %>
