--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,9 +15,5 @@
   <%= @user.salt %>
 </p>
 
-
-
-
-<td><%= link_to 'Account', edit_user_path(@user) %></td>
-
+<%= link_to 'Account', edit_user_path(@user) %>
 <%= link_to 'Logout', logout_path, :method => :delete %>
