--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,15 +21,10 @@
 
     <div class="login">
 
-
-      <% if signed_in? %>
-      <%= link_to "Account", account_path %>
-      <%= link_to "Logout", logout_path, :method => :delete %>
-      <% else %>
+      <% if !signed_in? %>
       <%= link_to "Register", signup_path %>
       <%= link_to "Login", login_path %>
       <% end %>
-
 
     </div>
   </div>
