--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,23 +1,9 @@
 
 
 
-
 <!--
 
-logged in: Your CrunchAlerts, Logout, Account
+insert homepage stuff
 
-
-
-<%= form_for :user do |f| %>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </div>
-
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
 
 -->
