--- a/app/views/shared/_alert_form.html.erb
+++ b/app/views/shared/_alert_form.html.erb
@@ -1,9 +1,22 @@
 <%= form_for @alert do |f| %>
 
   <div class="field">
-    <%= f.text_area :content %>
+    <%= f.text_field(:content) %>
   </div>
+
+<br /><br />
+
+<%= radio_button_tag(:cbase, "company") %>
+<%= label_tag(:company, "Company") %>
+<%= radio_button_tag(:cbase, "person") %>
+<%= label_tag(:person, "Person") %>
+<%= radio_button_tag(:cbase, "fund") %>
+<%= label_tag(:fund, "Venture Fund") %>
+
+<br /><br />
+
   <div class="actions">
     <%= f.submit "Submit" %>
   </div>
+
 <% end %>
