--- a/app/views/shared/_alert_form.html.erb
+++ b/app/views/shared/_alert_form.html.erb
@@ -15,6 +15,15 @@
 
 <br /><br />
 
+<%= select(:alert, :freq, options_for_select([['Daily', true], ['Weekly', false]])) %>
+
+<br /><br />
+
+<%= check_box(:alert, :news, {}, true, false) %>
+<%= label_tag(:news, "Include TechCrunch & TechMeme news updates") %>
+
+<br /><br />
+
   <div class="actions">
     <%= f.submit "Submit" %>
   </div>
