--- a/app/views/alerts/create.js.erb
+++ b/app/views/alerts/create.js.erb
@@ -1,3 +1,9 @@
 
 alert("<%= @check %>");
 
+$('#link').html("<a href=<%= @link %>>crunchbase link</a>");
+
+$('#link').html("<img src=<%= @pic %>></img>");
+
+
+
