--- a/app/views/shared/_alert_form.html.erb
+++ b/app/views/shared/_alert_form.html.erb
@@ -30,6 +30,13 @@
 
 <% end %>
 
-    <ul id="my_list">
+    <ul id="link">
       <li>Original item... please add more!</li>
     </ul>
+
+    <ul id="pic">
+      <li>Original item... please add more!</li>
+    </ul>
+
+<img src="http://www.crunchbase.com/assets/images/resized/0000/4561/4561v1-max-250x250.png" border="0" alt="Facebook Picture">
+
