--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= favicon_link_tag 'favicon.ico' %>
   <%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
   <%= stylesheet_link_tag 'main' %>
-  <%= javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js', 'rails', 'jquery.hint', 'application' %>
+  <%= javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js', 'rails', 'jquery.hint', 'jquery.form', 'application' %>
   <%= csrf_meta_tag %>
 </head>
 <body>
@@ -34,16 +34,12 @@
 
 
 
-
-
-
 <div class="center-container">
 
 
 <ul class="blurb">
 
 <hr />
-
 
 
 
@@ -54,22 +50,9 @@
 
 
 
-
-
-
-
-
-
-
-
 <div class="footer">
 &copy; 2011 CrunchAlert | <a href="mailto:contact@crunchalert.com">contact@crunchalert.com</a>
 </div>
-
-
-
-
-
 
 
 
