updated crunchalert form

--- a/app/views/shared/_crunchbase_form.html.erb
+++ b/app/views/shared/_crunchbase_form.html.erb
@@ -10,7 +10,7 @@
 
   <br>
 
-  <input type="submit" value="Add CrunchAlert">
+  <input type="submit" id="search-crunchbase" value="Add CrunchAlert">
 </form>
 
 
@@ -18,6 +18,10 @@
 <br />
 
 
-<div id='ass'>
-whats up
+
+
+
+
+<div id='input'>
+
 </div>
