--- a/app/views/shared/_crunchbase_form.html.erb
+++ b/app/views/shared/_crunchbase_form.html.erb
@@ -6,7 +6,7 @@
 
   <input type="radio" name="cbase" value="company">Company<br>
   <input type="radio" name="cbase" value="person">Person<br>
-  <input type="radio" name="cbase" value="fund">Venture Fund<br>
+  <input type="radio" name="cbase" value="financial-organization">Venture Fund<br>
 
   <br>
 
