finished url submit

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,6 @@
 <% if signed_in? %>
 
 <%= render 'shared/crunchbase_form' %>
-
 <%= render 'shared/news_form' %>
 
 <br />
@@ -15,13 +14,17 @@
 <br />
 
 <% @alerts.each do |alert| %>
-
 <div class="crunchalert">
   <%= image_tag(Picture.find_by_content(alert.content)[:url]) %>
-  <%=h alert.content.capitalize %>
+
+  <% unless alert.content.split[1] %>
+    <%=h alert.content.capitalize %>
+  <% else %>
+    <%=h alert.content.split[0].capitalize << ' ' << alert.content.split[1].capitalize %>
+  <% end %>
+
   <span class="edit_alert">Edit</span> 
 </div>
-
 <% end %>
 
 <% end %>
