--- a/app/views/weekly_mailer/alerts.html.erb
+++ b/app/views/weekly_mailer/alerts.html.erb
@@ -9,5 +9,9 @@
       <%= @weeklyalerts %>
 
 
+      <br />
+      <hr color="#333333"/>
+      <br />
+      Manage all of your email alerts at <a href="http://crunchalert.com">CrunchAlert.com</a>. 
   </body>
 </html>
