--- a/app/views/daily_mailer/news.html.erb
+++ b/app/views/daily_mailer/news.html.erb
@@ -11,5 +11,9 @@
 
     <% end %>
 
+    <br />
+    <hr color="#333333"/>
+    <br />
+      Manage all of your email alerts at <a href="http://crunchalert.com">CrunchAlert.com</a>. 
   </body>
 </html>
