--- a/app/views/weekly_mailer/news.html.erb
+++ b/app/views/weekly_mailer/news.html.erb
@@ -5,9 +5,13 @@
   </head>
   <body>
 
-    <p>
+ 
       <%= @weeklynews %>
-    </p>
+ 
 
+      <br />
+      <hr color="#333333"/>
+      <br />
+      Manage all of your email alerts at <a href="http://crunchalert.com">CrunchAlert.com</a>. 
   </body>
 </html>
