--- a/app/views/daily_mailer/alerts.html.erb
+++ b/app/views/daily_mailer/alerts.html.erb
@@ -7,13 +7,13 @@
 
     <% @dailyalerts.each do |alert| %>
 
-      <%= raw("<p>#{alert}</p>") %>
+    <%= raw("<p>#{alert}</p>") %>
 
     <% end %>
 
     <br />
     <hr color="#333333"/>
     <br />
-      Manage all of your email alerts at <a href="http://crunchalert.com">CrunchAlert.com</a>. 
+      Manage your email alerts at <a href="http://crunchalert.com">CrunchAlert.com</a>. 
   </body>
 </html>
