--- a/app/views/weekly_mailer/alerts.html.erb
+++ b/app/views/weekly_mailer/alerts.html.erb
@@ -5,13 +5,15 @@
   </head>
   <body>
 
+    <% @weeklyalerts.each do |weeklyalert| %>
 
-      <%= @weeklyalerts %>
+    <%= raw("<p>#{weeklyalert}</p>") %>
 
+    <% end %>
 
-      <br />
-      <hr color="#333333"/>
-      <br />
-      Manage all of your email alerts at <a href="http://crunchalert.com">CrunchAlert.com</a>. 
+    <br />
+    <hr color="#333333"/>
+    <br />
+    Manage your email alerts at <a href="http://crunchalert.com">CrunchAlert.com</a>. 
   </body>
 </html>
