--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,13 +4,20 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Welcome to example.com</h1>
     <p>
-      You have successfully signed up to example.com,
+      Thanks for joining CrunchAlert.
     </p>
     <p>
-      To login to the site, just follow this link: <%= @url %>.
+      You'll receive email alerts from us as soon as you add new <a href="http://crunchbase.com">CrunchBase</a> profiles to your list on <a href="http://crunchalert.com"CrunchAlert.com</a>. We track all the updates on every profile, so we give you a heads up whenever there's fresh news.    
     </p>
-    <p>Thanks for joining and have a great day!</p>
+    <p>
+      You can also keep abreast of all the tech updates (fundings, acquisitions, new products and companies) on CrunchBase by receiving a daily or weekly news digest from us too. 
+    </p>
+    <p>
+      Thanks again for signing up and we'll keep you posted.    
+    </p>
+    <p>
+      <a href="http://crunchalert.com">http://crunchalert.com</a>
+    </p>
   </body>
 </html>
