--- a/app/views/user_mailer/welcome_preview.html.erb
+++ b/app/views/user_mailer/welcome_preview.html.erb
@@ -5,11 +5,7 @@
   </head>
   <body>
 
-    <% @news.each do |news| %>
-
-    <%= raw("<p>#{news}</p>") %>
-
-    <% end %>
+    <%= raw("<p>#{@news}</p>") %>
 
     <br />
     <hr color="#333333"/>
