--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,10 @@
 
+<%= render 'shared/popular' %>
+
+<%= render 'shared/recent' %>
+
+<%= render 'shared/news' %>
+
 <% if signed_in? %>
 
 <%= render 'shared/crunchbase_form' %>
