page layout/partials

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,14 @@
 
-<%= render 'shared/popular' %>
+<%= render 'popular' %>
 
-<%= render 'shared/recent' %>
+<%= render 'recent' %>
 
-<%= render 'shared/news' %>
+<%= render 'yesterday_news' %>
 
 <% if signed_in? %>
 
-<%= render 'shared/crunchbase_form' %>
-<%= render 'shared/news_form' %>
+<%= render 'crunchbase_form' %>
+<%= render 'news_form' %>
 
 <br />
 <br />
