--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,21 +22,13 @@
 <br />
 
 <% @alerts.each do |alert| %>
+
 <div class="crunchalert" id="<%= alert.content.delete(' ') %>">
-  <%= image_tag(Picture.find_by_content(alert.content)[:url]) %>
-
-  <% unless alert.content.split[1] %>
-    <%=h alert.content.capitalize %>
-  <% else %>
-    <% alert.content.split.each do |x| %>
-    <%=h x.capitalize %>
-    <% end %>
-  <% end %>
-
- <span class="edit_alert">Edit</span>
-
-
+  <% name = alert.content.gsub(/[\s\.]/,'-') %>
+  <a href=<%= "http://crunchbase.com/#{alert.content_type}/#{name}" %>><%= image_tag(Picture.find_by_content(alert.content).url) %></a>
+  <span class="edit_alert">Edit</span>
 </div>
+
 <% end %>
 
 <% end %>
