--- a/app/views/pages/_recent.html.erb
+++ b/app/views/pages/_recent.html.erb
@@ -1,19 +1,11 @@
+<div id="recent">
 
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-
-
+<b>Recently Added</b>
 
 <% @recent.each do |alert| %>
 <% name = alert.content.gsub(/[\s\.]/,'-') %>
 <a href=<%= "http://crunchbase.com/#{alert.content_type}/#{name}" %>><%= image_tag(Picture.find_by_content(alert.content).url) %></a>
 <br />
 <% end %>
+
+</div>
