--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,4 +12,12 @@
     <% end %>
 
   </div>
+
+
+  <ul class="blurb">
+
+    Get email alerts on updates from <a href="http://crunchbase.com">Crunchbase</a>
+
+  </ul>
+
 </div>
