--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,9 +1,36 @@
 
-.container { position: relative; }
-#header { margin-top: 25px; }
-.login { position: absolute; right: 0px; }
-.blurb { margin-top: 25px; }
-.popular { position:absolute; right: 0px; }
-.footer { text-align: center; }
+.container { position: relative; height: 1600px; }
 
-hr { height: 13px; }
+#header { margin-top: 40px; }
+
+.login { position: absolute; right: 0px; top: 63px; font-weight: bold; font-style: none; }
+
+.login a:link { text-decoration: none; }
+
+.blurb { position: absolute; right: 0px; top: 10px; }
+
+
+
+
+#alert_sidebar { position:absolute; right: 0px; top: 145px; height: 1400px; width: 300px; }
+
+#popular { position:absolute; right: 0px; top: 25px; }
+
+#recent { position:absolute; right: 0px; bottom: 0px; }
+
+
+#intro { width: 550px; font-weight: bold; position: relative; top: 100px; line-height: 20px; font-size: 15px; }
+
+
+#form-crunchbase { position: relative; top: 100px; }
+#form-crunchnews { position: relative; top: 100px; }
+#alert_list { position: relative; top: 100px; width: 300px; }
+
+
+#yesterday_news {     }
+
+
+
+.footer { text-align: center; position: absolute; bottom: 0px; left: 300px; padding-bottom: 35px; }
+
+hr { position: absolute; top: 100px; height: 25px; width: 100%; }
