--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
 
   <ul class="blurb">
 
-    Get email alerts on updates from <a href="http://crunchbase.com">Crunchbase</a>
+    Get email alerts on updates from <a href="http://crunchbase.com">Crunchbase.com</a>
 
   </ul>
 
