--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -27,6 +27,18 @@
 #alert_list { position: relative; top: 100px; width: 300px; }
 
 
+
+
+
+.icons {margin: 0; padding: 0; position: absolute; right: 0px; top: 11px;}
+.icons li {margin: 2px; position: relative; padding: 4px 0; cursor: pointer; float: left; list-style: none;}
+.icons span.ui-icon {float: left; margin: 0 4px;}
+
+
+
+
+
+
 #yesterday_news {     }
 
 
