--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,13 +7,18 @@
 </div>
 
 
+<div class='button ui-widget ui-helper-clearfix icons'><li class='ui-state-default ui-corner-all'><span class='ui-icon ui-icon-plus'></span></li></div>
+
+<div class="edit_button"><b>Edit</b></div>
+
+
 <% if !signed_in? %>
 
 <div id="intro"> 
 
 Sign up to receive updates on your favorite tech companies and people. <br /><br />
 
-Once you register, you'll be able to receive email updates on any CrunchBase profile you want to track. You can also sign up to get a round-up of the latest tech news and deals too in your in inbox.
+Once you register, you'll be able to receive email updates on any CrunchBase profile you want to track. You can also sign up to get a round-up of the latest tech news and deals in your inbox too.
 
 </div>
 
@@ -43,6 +48,7 @@ Once you register, you'll be able to receive email updates on any CrunchBase pro
 
 <br />
 <br />
+
 
 
 <div id="alert_list">
