--- a/app/views/pages/_crunchbase_form.html.erb
+++ b/app/views/pages/_crunchbase_form.html.erb
@@ -1,6 +1,9 @@
 
+<div id="loader"></div>
+
+
 <form id="form-crunchbase" method="post" name="crunchbase">
-  <input id='crunchbase' type='text' title='crunchbase profile' name='crunchbase' />
+  <input id='crunchbase' type='text' title='add a crunchbase profile' name='crunchbase' />
 
   <br>
 
@@ -14,6 +17,4 @@
 </form>
 
 
-<br />
-<br />
 
