--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,12 @@
 
 </div>
 
+<div id="notification">
+asdfsdaf
+
+</div>
+
+
 
 <div class='button ui-widget ui-helper-clearfix icons'><li class='ui-state-default ui-corner-all'><span class='ui-icon ui-icon-plus'></span></li></div>
 
