--- a/app/views/pages/_recent.html.erb
+++ b/app/views/pages/_recent.html.erb
@@ -4,7 +4,7 @@
 
 <% @recent.each do |alert| %>
 <% name = alert.content.gsub(/[\s\.]/,'-') %>
-<a href=<%= "http://crunchbase.com/#{alert.content_type}/#{name}" %>><%= image_tag(Picture.find_by_content(alert.content).url) %></a>
+<a href=<%= "http://crunchbase.com/#{alert.content_type}/#{name}" %> title=<%= alert.content %>><%= image_tag(Picture.find_by_content(alert.content).url, :alt => alert.content) %></a>
 <br />
 <% end %>
 
