--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <div id="header">
-  <a href="/"><%= image_tag("crunchalert_logo.png", :alt => "crunchalert") %></a>
+  <a href="/" title="crunchalert"><%= image_tag("crunchalert_logo.png", :alt => "crunchalert") %></a>
 
   <div class="login">
 
