--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <%= render 'shared/head' -%>
 <body>
-<hr />
 <div class="container">
 <%= render 'shared/header' -%>
 <div class="center-container">
+
 
 
 
@@ -24,8 +24,13 @@
 
 
 
+
+
+
+
 </div>
 <%= render 'shared/footer' -%>
 </div>
+<%= render 'shared/analytics' -%>
 </body>
 </html>
