--- a/app/views/pages/_popular.html.erb
+++ b/app/views/pages/_popular.html.erb
@@ -1,7 +1,7 @@
 
 <div id="popular">
 
-<b>Most Popular CrunchAlerts</b>
+<b>Most Popular</b>
 
 <% @popular.each do |popular| %>
 <% alert = Alert.find_by_content(popular[0]) %>
