--- a/app/views/pages/_recent.html.erb
+++ b/app/views/pages/_recent.html.erb
@@ -1,6 +1,6 @@
 <div id="recent">
 
-<b>Recently Added</b>
+<b>Recent CrunchAlerts</b>
 
 <% @recent.each do |alert| %>
 <% name = alert.content.gsub(/[\s\.]/,'-') %>
