--- a/app/views/pages/_yesterday_news.html.erb
+++ b/app/views/pages/_yesterday_news.html.erb
@@ -1,6 +1,9 @@
 
 <div id="yesterday_news">
-<% @news.each do |daily| %>
-<%= raw("<p>#{daily}</p>") %>
-<% end %>
+Recent News
+<div id="yesterday-news">
+  <% @news.each do |daily| %>
+  <%= raw("<p>#{daily}</p>") %>
+  <% end %>
+</div>
 </div>
