--- a/app/views/pages/_popular.html.erb
+++ b/app/views/pages/_popular.html.erb
@@ -1,13 +1,10 @@
-
 <div id="popular">
-
-<b>Most Popular</b>
-
-<% @popular.each do |popular| %>
-<% alert = Alert.find_by_content(popular[0]) %>
-<% name = alert.content.gsub(/[\s\.]/,'-') %>
-<a href=<%= "http://crunchbase.com/#{alert.content_type}/#{name}" %> title=<%= alert.content %>><%= image_tag(Picture.find_by_content(alert.content).url, :alt => alert.content) %></a>
-<br />
-<% end%>
-
+  <span class="alert-header">Popular CrunchAlerts</span>
+  <div id="popular-alerts">
+    <% @popular.each do |popular| %>
+    <% alert = Alert.find_by_content(popular[0]) %>
+    <% name = alert.content.gsub(/[\s\.]/,'-') %>
+    <a href=<%= "http://crunchbase.com/#{alert.content_type}/#{name}" %> title=<%= alert.content %>><%= image_tag(Picture.find_by_content(alert.content).url, :alt => alert.content, :class => "popular") %></a>
+    <% end%>
+  </div>
 </div>
