--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,26 +1,21 @@
 
-<div id="alert_sidebar">
+<% if !signed_in? %>
+<div id="intro">
+Register to receive updates on any CrunchBase profile (company, person, or fund) you want to track. CrunchAlert will send you daily or weekly email alerts whenever there's updated information on their profile. <br /><br />You could sign up to get a round-up of the latest tech news and deals<br /> in your inbox too (see below).
+</div>
+<% end %>
 
-<%= render 'popular' %>
-<%= render 'recent' %>
-
+<div id="center-alerts">
+  <% if !signed_in? %>
+  <%= render 'yesterday_news' %>
+  <% end %>
+  <div id="alert_sidebar">
+    <%= render 'popular' %>
+    <%= render 'recent' %>
+  </div>
 </div>
 
 
-<% if !signed_in? %>
-
-<div id="intro"> 
-
-Register to receive updates on any CrunchBase profile (company, person, or fund) you want to track. CrunchAlert will send you daily or weekly email alerts whenever there's updated information on their profile. <br /><br />You could sign up to get a round-up of the latest tech news and deals in your inbox too (see below). 
-
-</div>
-
-<% end %>
-
-
-<% if !signed_in? %>
-<%= render 'yesterday_news' %>
-<% end %>
 
 
 <% if signed_in? %>
