--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,22 +1,45 @@
 
-.container { position: relative; height: 1600px; }
+body { font-family: Helvetica Neue, arial, helvetica, sans-serif; color: #333333; }
+.container { position: relative; height: 1300px; }
+
 
 /* header */
 
 #header { position: relative; margin-top: 40px; height: 85px; }
-.blurb { width: 650px; position: absolute; right: 25px; top: 0px; font-size: 1.8em; font-weight: bold; color: #888888; line-height: 1.5em; font-family: Helvetica Neue, arial, helvetica, sans-serif; border-width: 0px 0px 0px 10px; border-style: solid; border-color: red; padding-left: 16px; }
+.blurb { width: 650px; position: absolute; right: 25px; top: 0px; font-size: 1.8em; font-weight: bold; color: #888888; line-height: 1.5em; border-width: 0px 0px 0px 10px; border-style: solid; border-color: #DB0C09; padding-left: 16px; }
 #crunchalert-pic { position: relative; top: 10px; left: 7px; }
 #crunchbase-pic { position: relative; top: 2px; }
 .sign-up a:link { text-decoration: none; color: #555555; }
 .sign-up a:hover { text-decoration: underline; }
 
-.login { position: absolute; right: 0px; bottom: 0px; font-weight: bold; font-style: none; font-size: 1.3em; }
+.login { position: absolute; right: 0px; bottom: 0px; font-weight: bold; font-size: 1.25em; }
 .login a:link { text-decoration: none; }
 .login a:hover { text-decoration: underline; }
 
 
+/* center-container */
 
-.center-container {   }
+.center-container { height: 100%; }
+
+#intro { position: relative; top: 35px; left: 35px; width: 650px; font-size: 1.25em; line-height: 1.75em; }
+
+#center-alerts { position: relative; top: 50px; }
+.alert-header { position: relative; top: 17px; font-size: 1.5em; color: #DB0C09; font-weight: bold; }
+#yesterday-news { position: absolute; width: 600px; }
+
+#alert_sidebar { position: absolute; right: 0px; height: 2000px; width: 260px; }  
+
+#popular { position: absolute; right: 0px; }
+#popular-alerts { margin-top: 40px; }
+.popular { margin-bottom: 30px; }
+
+#recent { position:absolute; right: 0px; bottom: 0px; }
+#recent-alerts { margin-top: 40px; }
+.recent { margin-bottom: 30px; }
+
+
+
+
 
 
 
@@ -28,38 +51,12 @@
 
 #wait { visibility: hidden }
 
-
-#alert_sidebar { position:absolute; right: 0px; top: 145px; height: 1400px; width: 300px; }
-
-#popular { position:absolute; right: 0px; top: 25px; }
-
-#recent { position:absolute; right: 0px; bottom: 0px; }
-
-
-#intro { width: 550px; font-weight: bold; position: relative; top: 100px; line-height: 20px; font-size: 15px; }
-
-
 #form-crunchbase { position: relative; top: 100px; }
 #form-crunchnews { position: relative; top: 100px; }
 #alert_list { position: relative; top: 100px; width: 300px; }
-
-
-
-
 
 .icons {margin: 0; padding: 0; position: absolute; right: 0px; top: 11px;}
 .icons li {margin: 2px; position: relative; padding: 4px 0; cursor: pointer; float: left; list-style: none;}
 .icons span.ui-icon {float: left; margin: 0 4px;}
 
-
-
-
-
-
-#yesterday_news { width: 620px; position: relative; top: 100px; }
-
-
-
 .footer { text-align: center; position: absolute; bottom: 0px; left: 300px; padding-bottom: 35px; }
-
-
