--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,3 @@
-
 <div class="footer">
-&copy; 2011 CrunchAlert | <a href="mailto:contact@crunchalert.com">contact@crunchalert.com</a>
+  <%= link_to "About", about_path %> | <a href="http://github.com/sayem/crunchalert" target="_blank">CrunchAlert on Github</a> | <a href="mailto:contact@crunchalert.com">contact@crunchalert.com</a> | <span style="color:red">&copy; 2011 CrunchAlert</span>
 </div>
